build/parser.output
Terminales no usados en la gramática

    INTEGER_I
    FOREACH
    INT
    PRINT
    JOIN
    PARSEDOUBLE


Estado 23 conflictos: 1 reducción/reducción
Estado 61 conflictos: 1 desplazamiento/reducción
Estado 75 conflictos: 13 desplazamiento/reducción
Estado 79 conflictos: 19 desplazamiento/reducción
Estado 107 conflictos: 1 desplazamiento/reducción
Estado 128 conflictos: 19 desplazamiento/reducción
Estado 129 conflictos: 19 desplazamiento/reducción
Estado 130 conflictos: 19 desplazamiento/reducción
Estado 131 conflictos: 19 desplazamiento/reducción
Estado 132 conflictos: 19 desplazamiento/reducción
Estado 133 conflictos: 19 desplazamiento/reducción
Estado 134 conflictos: 19 desplazamiento/reducción
Estado 135 conflictos: 19 desplazamiento/reducción
Estado 136 conflictos: 13 desplazamiento/reducción
Estado 137 conflictos: 13 desplazamiento/reducción
Estado 138 conflictos: 13 desplazamiento/reducción
Estado 139 conflictos: 13 desplazamiento/reducción
Estado 140 conflictos: 13 desplazamiento/reducción
Estado 141 conflictos: 13 desplazamiento/reducción
Estado 144 conflictos: 19 desplazamiento/reducción
Estado 145 conflictos: 19 desplazamiento/reducción
Estado 146 conflictos: 19 desplazamiento/reducción
Estado 147 conflictos: 19 desplazamiento/reducción
Estado 164 conflictos: 19 desplazamiento/reducción
Estado 165 conflictos: 1 desplazamiento/reducción
Estado 183 conflictos: 1 desplazamiento/reducción
Estado 187 conflictos: 19 desplazamiento/reducción
Estado 222 conflictos: 1 desplazamiento/reducción
Estado 243 conflictos: 19 desplazamiento/reducción
Estado 251 conflictos: 1 desplazamiento/reducción
Estado 253 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: lines

    2 lines: ε
    3      | lines line

    4 line: expr end
    5     | SYSTEM '.' OUT '.' PRINTLN '(' expr ')' end
    6     | SYSTEM '.' OUT '.' PRINTLN '(' ')' end
    7     | declaration end
    8     | declaration
    9     | assigment end
   10     | assigment
   11     | block
   12     | sentenciasIf
   13     | loopWhile
   14     | loopFor
   15     | function
   16     | sentenciasSwitch
   17     | BREAK end
   18     | RETURN expr end
   19     | RETURN end
   20     | larray
   21     | multiDimension

   22 sentenciasIf: IF '(' expr ')' block
   23             | IF '(' expr ')' block ELSE sentenciasIf
   24             | IF '(' expr ')' block ELSE block

   25 loopWhile: WHILE '(' expr ')' block

   26 loopFor: FOR '(' declaration end expr end assigment ')' block
   27        | FOR '(' tipo ID DOSPUNTOS ID ')' block

   28 block: '{' lines '}'

   29 end: ';'

   30 case_list: ε
   31          | case_list case_stmt

   32 case_stmt: CASE expr DOSPUNTOS lines
   33          | DEFAULT DOSPUNTOS lines

   34 function: PUBLIC tipo ID '(' params ')' block
   35         | PUBLIC STATIC tipo ID '(' params ')' block

   36 params: ε
   37       | paramlist

   38 paramlist: tipo ID
   39          | tipo ID ',' paramlist

   40 declaration: tipo ID '=' expr
   41            | tipo ID
   42            | FINAL tipo ID '=' expr

   43 assigment: ID '=' expr

   44 multiDimension: tipo '[' ']' '[' ']' ID '=' NEW tipo '[' expr ']' '[' expr ']' end
   45               | tipo '[' ']' '[' ']' ID '=' '{' elementos '}' end

   46 tipo: INTEGER
   47     | TP_STRING
   48     | TP_FLOAT
   49     | TP_DOUBLE
   50     | BOOLEAN
   51     | TP_CHAR
   52     | VOID
   53     | BREAK
   54     | ARRAY
   55     | CONTINUE

   56 expr: expr '+' expr
   57     | expr '-' expr
   58     | expr '*' expr
   59     | expr '/' expr
   60     | expr '%' expr
   61     | '-' expr
   62     | expr AND expr
   63     | expr OR expr
   64     | expr LE expr
   65     | expr GE expr
   66     | expr '<' expr
   67     | expr '>' expr
   68     | expr EQ expr
   69     | expr NEQ expr
   70     | expr '&' expr
   71     | expr '|' expr
   72     | expr '^' expr
   73     | expr SHR expr
   74     | expr SHL expr
   75     | '!' expr
   76     | '(' expr ')'
   77     | '(' tipo ')' expr
   78     | VALUEOF '(' expr ')'
   79     | callFunction
   80     | ID '[' expr ']'
   81     | ID '[' expr ']' '=' expr
   82     | NUMBER
   83     | DECIMAL
   84     | FLOAD
   85     | STRING
   86     | CHAR
   87     | ID
   88     | TRUE
   89     | FALSE
   90     | CONTINUE
   91     | ID '[' expr ']' '[' expr ']'
   92     | ID '[' expr ']' '[' expr ']' '=' expr
   93     | ARRAYS '.' INDEXOF '(' expr ',' expr ')'
   94     | expr '.' EQUALS '(' expr ')'
   95     | expr '.' LENGTH
   96     | PARSEINT '(' expr ')'
   97     | PARSEFLOAT '(' expr ')'

   98 callFunction: ID '(' args ')'

   99 args: ε
  100     | arglist

  101 arglist: expr
  102        | expr ',' arglist

  103 sentenciasSwitch: SWITCH '(' expr ')' '{' case_list '}'

  104 elementos: expr ',' elementos
  105          | elementos ',' elementos
  106          | '{' elementos '}'
  107          | expr

  108 larray: tipo '[' ']' ID '=' NEW tipo '[' expr ']' end
  109       | tipo '[' ']' ID '=' '{' elementos '}' end
  110       | tipo '[' ']' ID '=' ID '.' ADD '(' expr ')' end


Terminales con las reglas donde aparecen

    $end (0) 0
    '!' (33) 75
    '%' (37) 60
    '&' (38) 70
    '(' (40) 5 6 22 23 24 25 26 27 34 35 76 77 78 93 94 96 97 98 103 110
    ')' (41) 5 6 22 23 24 25 26 27 34 35 76 77 78 93 94 96 97 98 103 110
    '*' (42) 58
    '+' (43) 56
    ',' (44) 39 93 102 104 105
    '-' (45) 57 61
    '.' (46) 5 6 93 94 95 110
    '/' (47) 59
    ';' (59) 29
    '<' (60) 66
    '=' (61) 40 42 43 44 45 81 92 108 109 110
    '>' (62) 67
    '[' (91) 44 45 80 81 91 92 108 109 110
    ']' (93) 44 45 80 81 91 92 108 109 110
    '^' (94) 72
    '{' (123) 28 45 103 106 109
    '|' (124) 71
    '}' (125) 28 45 103 106 109
    error (256)
    FLOAD <ftnt> (258) 84
    STRING <str> (259) 85
    ID <str> (260) 27 34 35 38 39 40 41 42 43 44 45 80 81 87 91 92 98 108 109 110
    CHAR <ch> (261) 86
    DECIMAL <dble> (262) 83
    NUMBER <num> (263) 82
    TRUE <num> (264) 88
    FALSE <num> (265) 89
    BOOLEAN (266) 50
    TP_DOUBLE (267) 49
    TP_FLOAT (268) 48
    TP_STRING (269) 47
    TP_CHAR (270) 51
    INTEGER_I (271)
    INTEGER (272) 46
    GE (273) 65
    LE (274) 64
    EQ (275) 68
    NEQ (276) 69
    SHR (277) 73
    SHL (278) 74
    OR (279) 63
    AND (280) 62
    IF (281) 22 23 24
    ELSE (282) 23 24
    WHILE (283) 25
    FOR (284) 26 27
    FOREACH (285)
    SWITCH (286) 103
    CASE (287) 32
    DEFAULT (288) 33
    BREAK (289) 17 53
    CONTINUE (290) 55 90
    RETURN (291) 18 19
    PUBLIC (292) 34 35
    STATIC (293) 35
    VOID (294) 52
    EQUALS (295) 94
    INT (296)
    NEW (297) 44 108
    ARRAYS (298) 93
    INDEXOF (299) 93
    SYSTEM (300) 5 6
    OUT (301) 5 6
    PRINTLN (302) 5 6
    VALUEOF (303) 78
    PRINT (304)
    JOIN (305)
    ARRAY (306) 54
    LENGTH (307) 95
    ADD (308) 110
    PARSEINT (309) 96
    PARSEFLOAT (310) 97
    PARSEDOUBLE (311)
    FINAL (312) 42
    DOSPUNTOS (313) 27 32 33
    UMINUS (314)


No terminales con las reglas donde aparecen

    $accept (81)
        on left: 0
    program <node> (82)
        on left: 1
        on right: 0
    lines <node> (83)
        on left: 2 3
        on right: 1 3 28 32 33
    line <node> (84)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 3
    sentenciasIf <node> (85)
        on left: 22 23 24
        on right: 12 23
    loopWhile <node> (86)
        on left: 25
        on right: 13
    loopFor <node> (87)
        on left: 26 27
        on right: 14
    block <node> (88)
        on left: 28
        on right: 11 22 23 24 25 26 27 34 35
    end (89)
        on left: 29
        on right: 4 5 6 7 9 17 18 19 26 44 45 108 109 110
    case_list <node> (90)
        on left: 30 31
        on right: 31 103
    case_stmt <node> (91)
        on left: 32 33
        on right: 31
    function <node> (92)
        on left: 34 35
        on right: 15
    params <plist> (93)
        on left: 36 37
        on right: 34 35
    paramlist <plist> (94)
        on left: 38 39
        on right: 37 39
    declaration <node> (95)
        on left: 40 41 42
        on right: 7 8 26
    assigment <node> (96)
        on left: 43
        on right: 9 10 26
    multiDimension <node> (97)
        on left: 44 45
        on right: 21
    tipo <tipo> (98)
        on left: 46 47 48 49 50 51 52 53 54 55
        on right: 27 34 35 38 39 40 41 42 44 45 77 108 109 110
    expr <node> (99)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
        on right: 4 5 18 22 23 24 25 26 32 40 42 43 44 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 80 81 91 92 93 94 95 96 97 101 102 103 104 107 108 110
    callFunction <node> (100)
        on left: 98
        on right: 79
    args <args> (101)
        on left: 99 100
        on right: 98
    arglist <args> (102)
        on left: 101 102
        on right: 100 102
    sentenciasSwitch <node> (103)
        on left: 103
        on right: 16
    elementos <node> (104)
        on left: 104 105 106 107
        on right: 45 104 105 106 109
    larray <node> (105)
        on left: 108 109 110
        on right: 20


Estado 0

    0 $accept: • program $end

    $default  reduce usando la regla 2 (lines)

    program  ir al estado 1
    lines    ir al estado 2


Estado 1

    0 $accept: program • $end

    $end  desplazar e ir al estado 3


Estado 2

    1 program: lines •
    3 lines: lines • line

    FLOAD       desplazar e ir al estado 4
    STRING      desplazar e ir al estado 5
    ID          desplazar e ir al estado 6
    CHAR        desplazar e ir al estado 7
    DECIMAL     desplazar e ir al estado 8
    NUMBER      desplazar e ir al estado 9
    TRUE        desplazar e ir al estado 10
    FALSE       desplazar e ir al estado 11
    BOOLEAN     desplazar e ir al estado 12
    TP_DOUBLE   desplazar e ir al estado 13
    TP_FLOAT    desplazar e ir al estado 14
    TP_STRING   desplazar e ir al estado 15
    TP_CHAR     desplazar e ir al estado 16
    INTEGER     desplazar e ir al estado 17
    IF          desplazar e ir al estado 18
    WHILE       desplazar e ir al estado 19
    FOR         desplazar e ir al estado 20
    SWITCH      desplazar e ir al estado 21
    BREAK       desplazar e ir al estado 22
    CONTINUE    desplazar e ir al estado 23
    RETURN      desplazar e ir al estado 24
    PUBLIC      desplazar e ir al estado 25
    VOID        desplazar e ir al estado 26
    ARRAYS      desplazar e ir al estado 27
    SYSTEM      desplazar e ir al estado 28
    VALUEOF     desplazar e ir al estado 29
    ARRAY       desplazar e ir al estado 30
    PARSEINT    desplazar e ir al estado 31
    PARSEFLOAT  desplazar e ir al estado 32
    FINAL       desplazar e ir al estado 33
    '-'         desplazar e ir al estado 34
    '('         desplazar e ir al estado 35
    '{'         desplazar e ir al estado 36
    '!'         desplazar e ir al estado 37

    $default  reduce usando la regla 1 (program)

    line              ir al estado 38
    sentenciasIf      ir al estado 39
    loopWhile         ir al estado 40
    loopFor           ir al estado 41
    block             ir al estado 42
    function          ir al estado 43
    declaration       ir al estado 44
    assigment         ir al estado 45
    multiDimension    ir al estado 46
    tipo              ir al estado 47
    expr              ir al estado 48
    callFunction      ir al estado 49
    sentenciasSwitch  ir al estado 50
    larray            ir al estado 51


Estado 3

    0 $accept: program $end •

    $default  aceptar


Estado 4

   84 expr: FLOAD •

    $default  reduce usando la regla 84 (expr)


Estado 5

   85 expr: STRING •

    $default  reduce usando la regla 85 (expr)


Estado 6

   43 assigment: ID • '=' expr
   80 expr: ID • '[' expr ']'
   81     | ID • '[' expr ']' '=' expr
   87     | ID •
   91     | ID • '[' expr ']' '[' expr ']'
   92     | ID • '[' expr ']' '[' expr ']' '=' expr
   98 callFunction: ID • '(' args ')'

    '('  desplazar e ir al estado 52
    '='  desplazar e ir al estado 53
    '['  desplazar e ir al estado 54

    $default  reduce usando la regla 87 (expr)


Estado 7

   86 expr: CHAR •

    $default  reduce usando la regla 86 (expr)


Estado 8

   83 expr: DECIMAL •

    $default  reduce usando la regla 83 (expr)


Estado 9

   82 expr: NUMBER •

    $default  reduce usando la regla 82 (expr)


Estado 10

   88 expr: TRUE •

    $default  reduce usando la regla 88 (expr)


Estado 11

   89 expr: FALSE •

    $default  reduce usando la regla 89 (expr)


Estado 12

   50 tipo: BOOLEAN •

    $default  reduce usando la regla 50 (tipo)


Estado 13

   49 tipo: TP_DOUBLE •

    $default  reduce usando la regla 49 (tipo)


Estado 14

   48 tipo: TP_FLOAT •

    $default  reduce usando la regla 48 (tipo)


Estado 15

   47 tipo: TP_STRING •

    $default  reduce usando la regla 47 (tipo)


Estado 16

   51 tipo: TP_CHAR •

    $default  reduce usando la regla 51 (tipo)


Estado 17

   46 tipo: INTEGER •

    $default  reduce usando la regla 46 (tipo)


Estado 18

   22 sentenciasIf: IF • '(' expr ')' block
   23             | IF • '(' expr ')' block ELSE sentenciasIf
   24             | IF • '(' expr ')' block ELSE block

    '('  desplazar e ir al estado 55


Estado 19

   25 loopWhile: WHILE • '(' expr ')' block

    '('  desplazar e ir al estado 56


Estado 20

   26 loopFor: FOR • '(' declaration end expr end assigment ')' block
   27        | FOR • '(' tipo ID DOSPUNTOS ID ')' block

    '('  desplazar e ir al estado 57


Estado 21

  103 sentenciasSwitch: SWITCH • '(' expr ')' '{' case_list '}'

    '('  desplazar e ir al estado 58


Estado 22

   17 line: BREAK • end
   53 tipo: BREAK •

    ';'  desplazar e ir al estado 59

    $default  reduce usando la regla 53 (tipo)

    end  ir al estado 60


Estado 23

   55 tipo: CONTINUE •
   90 expr: CONTINUE •

    ID        reduce usando la regla 55 (tipo)
    ')'       reduce usando la regla 55 (tipo)
    ')'       [reduce usando la regla 90 (expr)]
    '['       reduce usando la regla 55 (tipo)
    $default  reduce usando la regla 90 (expr)


Estado 24

   18 line: RETURN • expr end
   19     | RETURN • end

    FLOAD       desplazar e ir al estado 4
    STRING      desplazar e ir al estado 5
    ID          desplazar e ir al estado 61
    CHAR        desplazar e ir al estado 7
    DECIMAL     desplazar e ir al estado 8
    NUMBER      desplazar e ir al estado 9
    TRUE        desplazar e ir al estado 10
    FALSE       desplazar e ir al estado 11
    CONTINUE    desplazar e ir al estado 62
    ARRAYS      desplazar e ir al estado 27
    VALUEOF     desplazar e ir al estado 29
    PARSEINT    desplazar e ir al estado 31
    PARSEFLOAT  desplazar e ir al estado 32
    '-'         desplazar e ir al estado 34
    '('         desplazar e ir al estado 35
    ';'         desplazar e ir al estado 59
    '!'         desplazar e ir al estado 37

    end           ir al estado 63
    expr          ir al estado 64
    callFunction  ir al estado 49


Estado 25

   34 function: PUBLIC • tipo ID '(' params ')' block
   35         | PUBLIC • STATIC tipo ID '(' params ')' block

    BOOLEAN    desplazar e ir al estado 12
    TP_DOUBLE  desplazar e ir al estado 13
    TP_FLOAT   desplazar e ir al estado 14
    TP_STRING  desplazar e ir al estado 15
    TP_CHAR    desplazar e ir al estado 16
    INTEGER    desplazar e ir al estado 17
    BREAK      desplazar e ir al estado 65
    CONTINUE   desplazar e ir al estado 66
    STATIC     desplazar e ir al estado 67
    VOID       desplazar e ir al estado 26
    ARRAY      desplazar e ir al estado 30

    tipo  ir al estado 68


Estado 26

   52 tipo: VOID •

    $default  reduce usando la regla 52 (tipo)


Estado 27

   93 expr: ARRAYS • '.' INDEXOF '(' expr ',' expr ')'

    '.'  desplazar e ir al estado 69


Estado 28

    5 line: SYSTEM • '.' OUT '.' PRINTLN '(' expr ')' end
    6     | SYSTEM • '.' OUT '.' PRINTLN '(' ')' end

    '.'  desplazar e ir al estado 70


Estado 29

   78 expr: VALUEOF • '(' expr ')'

    '('  desplazar e ir al estado 71


Estado 30

   54 tipo: ARRAY •

    $default  reduce usando la regla 54 (tipo)


Estado 31

   96 expr: PARSEINT • '(' expr ')'

    '('  desplazar e ir al estado 72


Estado 32

   97 expr: PARSEFLOAT • '(' expr ')'

    '('  desplazar e ir al estado 73


Estado 33

   42 declaration: FINAL • tipo ID '=' expr
